After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662895 - More deprecation fixes
More deprecation fixes
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-27 20:55 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-03-13 04:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mutter-window-demo: Remove deprecated stuff (6.29 KB, patch)
2011-10-27 20:55 UTC, Jasper St. Pierre (not reading bugmail)
reviewed Details | Review
mutter-mag: Remove deprecated stuff (3.69 KB, patch)
2011-10-27 20:55 UTC, Jasper St. Pierre (not reading bugmail)
reviewed Details | Review
ui: Remove deprecated stuff (1.59 KB, patch)
2011-10-27 20:55 UTC, Jasper St. Pierre (not reading bugmail)
reviewed Details | Review
mutter-window-demo: Remove deprecated stuff (6.75 KB, patch)
2011-10-28 16:27 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
mutter-mag: Remove deprecated stuff (3.81 KB, patch)
2011-10-28 16:28 UTC, Jasper St. Pierre (not reading bugmail)
reviewed Details | Review
p# Attachment to Bug 662895 - More deprecation fixes (1.63 KB, patch)
2011-10-28 16:28 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
theme-viewer: Fix layout (1.60 KB, patch)
2011-10-28 16:28 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
theme-viewer: Fix invisible borders (3.77 KB, patch)
2011-10-28 16:29 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
mutter-mag: Remove deprecated stuff (3.08 KB, patch)
2011-10-28 19:08 UTC, Jasper St. Pierre (not reading bugmail)
accepted-commit_now Details | Review
mutter-mag: Quit when the user hits escape (786 bytes, patch)
2011-10-28 19:08 UTC, Jasper St. Pierre (not reading bugmail)
accepted-commit_now Details | Review

Description Jasper St. Pierre (not reading bugmail) 2011-10-27 20:55:47 UTC
More GDK breakage, more mutter fixage
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-10-27 20:55:48 UTC
Created attachment 200135 [details] [review]
mutter-window-demo: Remove deprecated stuff
Comment 2 Jasper St. Pierre (not reading bugmail) 2011-10-27 20:55:50 UTC
Created attachment 200136 [details] [review]
mutter-mag: Remove deprecated stuff
Comment 3 Jasper St. Pierre (not reading bugmail) 2011-10-27 20:55:52 UTC
Created attachment 200137 [details] [review]
ui: Remove deprecated stuff
Comment 4 Matthias Clasen 2011-10-28 15:56:34 UTC
Review of attachment 200136 [details] [review]:

This is not just removing deprecated stuff though. It also gets rid of the keyboard grab. At the very least, the commit message should probably explain why that is not needed anymore.
Comment 5 Matthias Clasen 2011-10-28 15:56:34 UTC
Review of attachment 200136 [details] [review]:

This is not just removing deprecated stuff though. It also gets rid of the keyboard grab. At the very least, the commit message should probably explain why that is not needed anymore.
Comment 6 Matthias Clasen 2011-10-28 15:57:29 UTC
Review of attachment 200137 [details] [review]:

::: src/ui/ui.c
@@ +214,1 @@
   gdk_event_set_device (gevent, gdk_device_manager_get_client_pointer (gmanager));

Could just use gdevice here as well, then ?
Comment 7 Matthias Clasen 2011-10-28 16:00:46 UTC
Review of attachment 200135 [details] [review]:

This one looks pretty obvious. The only thing to verify here is that the table->grid replacement doesn't mess up any expand behaviour. I assume you've tested that ?
Comment 8 Matthias Clasen 2011-10-28 16:02:15 UTC
Review of attachment 200135 [details] [review]:

This one looks pretty obvious. The only thing to verify here is that the table->grid replacement doesn't mess up any expand behaviour. I assume you've tested that ?
Comment 9 Jasper St. Pierre (not reading bugmail) 2011-10-28 16:27:45 UTC
Created attachment 200186 [details] [review]
mutter-window-demo: Remove deprecated stuff

I tested it by running it, but not by resizing it.
Comment 10 Jasper St. Pierre (not reading bugmail) 2011-10-28 16:28:11 UTC
Created attachment 200188 [details] [review]
mutter-mag: Remove deprecated stuff

Remove a keyboard grab, as there's no easy way to get a list of all
keyboard-like devices for us to do a grab on.



This a better commit message? psst.. a new GDK API for grabbing
all keyboard-like devices wouldn't be bad
Comment 11 Jasper St. Pierre (not reading bugmail) 2011-10-28 16:28:32 UTC
Created attachment 200189 [details] [review]
p# Attachment to Bug 662895 - More deprecation fixes

ui: Remove deprecated stuff



Sure thing.
Comment 12 Jasper St. Pierre (not reading bugmail) 2011-10-28 16:28:46 UTC
Created attachment 200190 [details] [review]
theme-viewer: Fix layout

Fix the expand there.
Comment 13 Jasper St. Pierre (not reading bugmail) 2011-10-28 16:29:04 UTC
Created attachment 200191 [details] [review]
theme-viewer: Fix invisible borders

And while I'm at it, why not. This fixes theme-viewer to be useful again.
Comment 14 Matthias Clasen 2011-10-28 18:47:27 UTC
Review of attachment 200186 [details] [review]:

Ok, looks good then
Comment 15 Matthias Clasen 2011-10-28 18:51:07 UTC
Review of attachment 200188 [details] [review]:

Well, given that you are only grabbing the client_pointer and not all pointer-like devices, I don't see why you couldn't just do the same for the keyboard.
Use gdk_device_get_associated_device, to get the keyboard to grab, I think...
Comment 16 Matthias Clasen 2011-10-28 18:51:46 UTC
Review of attachment 200189 [details] [review]:

Looks fine to me.
Comment 17 Matthias Clasen 2011-10-28 18:53:04 UTC
Review of attachment 200190 [details] [review]:

Looks ok
Comment 18 Jasper St. Pierre (not reading bugmail) 2011-10-28 19:08:21 UTC
Created attachment 200203 [details] [review]
mutter-mag: Remove deprecated stuff

Ah. That's a somewhat quirky API, but it sort of makes sense.
Comment 19 Jasper St. Pierre (not reading bugmail) 2011-10-28 19:08:27 UTC
Created attachment 200204 [details] [review]
mutter-mag: Quit when the user hits escape
Comment 20 Jasper St. Pierre (not reading bugmail) 2011-10-28 19:09:50 UTC
Attachment 200186 [details] pushed as 7ecd673 - mutter-window-demo: Remove deprecated stuff
Attachment 200190 [details] pushed as 8087872 - theme-viewer: Fix layout


Pushed the ACN patches.
Comment 21 Matthias Clasen 2011-10-29 00:45:41 UTC
Review of attachment 200203 [details] [review]:

Looks good to me now.
Comment 22 Matthias Clasen 2011-10-29 00:45:43 UTC
Review of attachment 200203 [details] [review]:

Looks good to me now.
Comment 23 Matthias Clasen 2011-10-29 00:49:33 UTC
Review of attachment 200204 [details] [review]:

Looks correct, this was clearly the intention all along.
Comment 24 Jasper St. Pierre (not reading bugmail) 2011-10-29 01:22:37 UTC
Attachment 200203 [details] pushed as 1b04a40 - mutter-mag: Remove deprecated stuff
Attachment 200204 [details] pushed as 3beb33b - mutter-mag: Quit when the user hits escape
Comment 25 Jasper St. Pierre (not reading bugmail) 2012-03-13 04:48:55 UTC
Comment on attachment 200191 [details] [review]
theme-viewer: Fix invisible borders

Attachment 200191 [details] pushed as 0b7f2f8 - theme-viewer: Fix invisible borders


It seems this patch never got pushed for whatever reason. Pushing now.