mutter-window-demo: Remove deprecated stuff

https://bugzilla.gnome.org/show_bug.cgi?id=662895